--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,15 +1,13 @@
 [uwsgi]
-mount = /src=app.py
-#module = app:app
-callable = app
-uid = www-data
-gid = www-data
+module = app:app
+#callable = app
+#manage-script-name = true
 master = true
 processes = 2
 
-#--mount /app=myfile.py --callable app --manage-script-name
 socket = /tmp/uwsgi.socket
-chmod-sock = 664
+chmod-socket = 664
+uid = www-data
+gid = www-data
 vacuum = true
-
 die-on-term = true
